Archive2/bd/0a14241f656105/output
main.cpp: In function 'int main()':
main.cpp:26:36: error: use of deleted function 'void X::processPointer(T*) [with T = void]'
     x.processPointer<void>((void*)0);
                                    ^
main.cpp:21:6: error: declared here
 void X::processPointer<void>(void*) = delete;
      ^
